syntax = "proto3";

package capper;

import "proto/capper/capper.proto";

option go_package = "github.com/chancez/capper/proto/capper";

service Querier {
  rpc CaptureQuery(CaptureQueryRequest) returns (stream capper.CaptureResponse) {}
}

message CaptureQueryRequest {
  repeated CaptureQueryTarget targets = 1;
  capper.CaptureRequest capture_request = 2;
}

message CaptureQueryTarget {
  oneof target {
    string node = 1;
    capper.Pod pod = 2;
    string pod_namespace = 3;
  };
}
